--- a/sar_io.html
+++ b/sar_io.html
@@ -27,11 +27,11 @@
                     wtps.push(parseFloat(temp2[4]));
                     rsk.push(to1024(temp2[5]));
                     wsk.push(to1024(temp2[6]));
-                    categories.push("第"+i+"秒");
+                    categories.push(temp2[0]);
                 }
                 set_h_title("硬盘IO使用情况 1");
                 set_h_sub_title("test.com");
-                set_h_xaxis_setp(5);
+                set_h_xaxis_setp(2);
                 set_h_tooltip("");
                 set_h_yaxis_title("IO使用情况");
                 set_h_xaxis_categories(categories);
