--- a/sar_men.html
+++ b/sar_men.html
@@ -20,11 +20,11 @@
                 for(var i=0; i<rc.length; i++){
                     temp = getNotNullArr(rc[i].split(" "));
                         memused.push(parseFloat(temp[4]));
-                        categories.push("第"+ i.toString()+"秒");
+                        categories.push(temp[0]);
                 }
                 set_h_title("内存使用情况");
                 set_h_sub_title("test.com");
-                set_h_xaxis_setp(20);
+                set_h_xaxis_setp(2);
                 set_h_tooltip("%");
                 set_h_yaxis_title("内存使用率%");
                 set_h_xaxis_categories(categories);
